[tool.poetry]
name = "generic_lexer"
version = "1.1.2"
description = "A generic pattern-based Lexer/tokenizer tool."
readme = "README.md"
authors = ["Eli Bendersky <eliben@gmail.com>"]
maintainers = ["Leandro (Cerberus1746) Benedet Garcia <cerberus1746@gmail.com>"]
license = "The Unlicense"
documentation = "https://cerberus1746.github.io/generic_lexer/"
repository = "https://github.com/Cerberus1746/generic_lexer"
keywords = ["parser", "lexer", "tokenizer"]

classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Text Processing",
]

packages = [{ include = "generic_lexer", from = "src" }]


[tool.poetry.dependencies]
python = ">=3.6.1, <4.0.0"
coverage = "^5.3"
pytest = "^6.1.2"
sphinx-autodoc-typehints = "^1.11.1"


[tool.poetry.dev-dependencies]
tox = { version = "^3.3.0", optional = true }
sphinx-autodoc-typehints = { version = "^1", optional = true }
pytest = { version = "^6", optional = true }
coverage = { version = "^5", optional = true }
pylama = { version = "^7.7.1", optional = true }
mypy = { version = "^0.790", optional = true }
bandit = { version = "^1.6.2", optional = true }
black = { version = "^20.8b1", optional = true }
tox-gh-actions = { version = "^2.0.0", optional = true }


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Cerberus1746/generic_lexer/issues"


[tool.poetry.extras]
"tox" = ["tox"]
"github" = ["tox", "tox-gh-actions"]
"tests" = ["sphinx-autodoc-typehints", "pytest", "coverage"]
"docs" = ["sphinx-autodoc-typehints"]
"linting" = ["pylama", "mypy", "bandit", "black"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
