[metadata]
name = generic_lexer
author = attr:generic_lexer.__author__
author_email = attr:generic_lexer.__author_email__
maintainer = attr:generic_lexer.__maintainer__
maintainer_email = attr:generic_lexer.__maintainer_email__
version = attr:generic_lexer.__version__
license = attr:generic_lexer.__license__
license_file = LICENSE
url = attr:generic_lexer.__url__
description = attr:generic_lexer.__description__
home-page = https://cerberus1746.github.io/generic_lexer/
python_requires = >= 3.6
long_description = file: README.md, LICENSE
project_urls =
    Repository = https://github.com/Cerberus1746/generic_lexer
    Bug Tracker = https://github.com/Cerberus1746/generic_lexer/issues
    Documentation = https://cerberus1746.github.io/generic_lexer/

classifiers =
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

    License :: OSI Approved :: The Unlicense (Unlicense)

    Intended Audience :: Developers

    Development Status :: 5 - Production/Stable

    Topic :: Software Development
    Topic :: Software Development :: Interpreters
    Topic :: Text Processing

keywords =
    parser
    lexer
    tokenizer

[options]
python_requires = >=3.5
zip_safe = True
packages=generic_lexer
package_dir=
    =src

[bdist_wheel]
universal=1

[options.extras_require]
docs =
    sphinx-autodoc-typehints
tests =
    sphinx-autodoc-typehints
    tox
