[metadata]
name = generic_lexer
author = Leandro Benedet Garcia
author_email = cerberus1746@gmail.com
version = attr: generic_lexer.__version__
license = MIT
license_file = LICENSE.rst
url = https://github.com/Cerberus1746/generic_lexer/
description = A generic pattern-based Lexer/tokenizer tool.
home-page = https://cerberus1746.github.io/generic_lexer/
python_requires = >= 3.6
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Repository = https://github.com/Cerberus1746/generic_lexer
    Bug Tracker = https://github.com/Cerberus1746/generic_lexer/issues
    Documentation = https://cerberus1746.github.io/generic_lexer/

classifiers =
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

    License :: OSI Approved :: MIT

    Intended Audience :: Developers

    Development Status :: 5 - Production/Stable

    Topic :: Software Development
    Topic :: Software Development :: Interpreters
    Topic :: Text Processing

keywords =
    parser
    lexer
    tokenizer

[options]
python_requires = >=3.6.1
zip_safe = True
packages=generic_lexer
package_dir=
    =src

[bdist_wheel]
universal=1
