[metadata]
name = rosetta_lang
version = attr: rosetta_lang.__version__
description = read palette files and convert them
long_description = file: README.md, LICENSE
license = MIT

classifiers =
    Programming Language :: Python :: 3

keywords =
    programming-language
    transpiler

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
